# rapscallion

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  REQUIREMENTS.md  appveyor.yml
app/: CMakeLists.txt  build.sh  main.cpp
cmake/modules/: 3rdparty.cmake
include/: connection.h  future.h  proxydispatcher.h  rpc.h  serializer.h  serverconnection.h
include/RaPsCallion/: Connection.h  Dispatcher.h  InterfaceDispatcher.h  InterfaceProxy.h  Proxy.h  RpcClient.h  RpcHandle.h  RpcHost.h  Serializer.h  Server.h  connection.h  future.h  proxydispatcher.h  rpc.h  rpc2.h  serializer.h  serializer_fwd.hpp  serverconnection.h
src/: RpcHandle.cpp  Serializer.cpp  connection.cpp  future.cpp  rpc.cpp  serializer.cpp  serverconnection.cpp
test/: CMakeLists.txt  call.cpp  serializer.cpp  simple-call.cpp
